--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   </p>
 
   <h3>Fun Games</h3>
-  
+
   <ul class="gameslist">
 
     <li>Scratch the furniture</li>
-    <li>Jump on keyboard</li>
+    <li>Jump on the keyboard</li>
     <li>Stare the human</li>
   </ul>
 </main> 
